--- a/BlogV1/Views/Home/Index.cshtml
+++ b/BlogV1/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="contact.html">test Us</a></li>
                 </ul>
             </div>
             <div class="logo">
