--- a/BlogV1/Views/Shared/_AdminLayout.cshtml
+++ b/BlogV1/Views/Shared/_AdminLayout.cshtml
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>Admin</title>
 
     <!-- Custom fonts for this template-->
     <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -50,11 +50,7 @@
                     <span>Ana Sayfa</span>
                 </a>
             </li>
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Bloglarım
-            </div>
+ 
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
@@ -67,13 +63,53 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Blog İslemleri :</h6>
                         <a class="collapse-item" href="/Admin/Blogs">Bloglarım</a>
-                        <a class="collapse-item" href="/Admin/EditBlog">Blog Düzenleme</a>
+                        <a class="collapse-item" href="/Blogs/Index">Blog Sitesine Git</a>
+                        @* <a class="collapse-item" href="/Admin/EditBlog">Blog Düzenleme</a> *@
                     </div>
                 </div>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseComment"
+                   aria-expanded="true" aria-controls="collapseComment">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>Yorumlarım</span>
+                </a>
+                <div id="collapseComment" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Yorum İslemleri :</h6>
+                        <a class="collapse-item" href="/Admin/Comments">Yorumlarım</a>
+                    </div>
+                </div>
+            </li>
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseuser"
+                   aria-expanded="true" aria-controls="collapseuser">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>Kullanıcılarımız</span>
+                </a>
+                <div id="collapseuser" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Kullanıcı İslemleri :</h6>
+                        <a class="collapse-item" href="/Admin/Register">Kullanıcı Ekle</a>
+                    </div>
+                </div>
+            </li>
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapscontact"
+                   aria-expanded="true" aria-controls="collapscontact">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>İletişim</span>
+                </a>
+                <div id="collapscontact" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">İletişim İslemleri :</h6>
+                        <a class="collapse-item" href="/Admin/Contact">İletişimlerimiz</a>
+                    </div>
+                </div>
+            </li>
 
 
         </ul>
@@ -92,7 +128,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
 
-                    <!-- Topbar Search -->
+     @*                <!-- Topbar Search -->
                     <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
                             <input type="text" class="form-control bg-light border-0 small" placeholder="Ara..."
@@ -104,7 +140,7 @@
                             </div>
                         </div>
                     </form>
-
+ *@
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
@@ -263,7 +299,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
                                 <img class="img-profile rounded-circle"
                                      src="/img/undraw_profile.svg">
                             </a>
@@ -272,16 +308,9 @@
                                  aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
+                                    Profil
                                 </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Activity Log
-                                </a>
+
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -303,7 +332,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; Ömer KOCABAY @DateTime.Now.Year</span>
                     </div>
                 </div>
             </footer>
@@ -325,15 +354,15 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Emin misiniz?</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-body">Ayrılmak Üzeresiniz...</div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">İptal</button>
+                    <a class="btn btn-primary" href="/Admin/Logout">Çıkış Yap</a>
                 </div>
             </div>
         </div>
